<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.golchin.roman</groupId>
    <artifactId>program-model-verification</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <antlr4.visitor>true</antlr4.visitor>
        <antlr4.listener>true</antlr4.listener>
        <maven.compiler.source>13</maven.compiler.source>
        <maven.compiler.target>13</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.8</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.graphstream</groupId>-->
<!--            <artifactId>gs-core</artifactId>-->
<!--            <version>1.3</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.graphstream</groupId>-->
<!--            <artifactId>gs-ui</artifactId>-->
<!--            <version>1.3</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.github.graphstream</groupId>
            <artifactId>gs-core</artifactId>
            <version>2.0.0-beta</version>
        </dependency>
        <dependency>
            <groupId>com.github.graphstream</groupId>
            <artifactId>gs-ui-swing</artifactId>
            <version>2.0-alpha</version>
        </dependency>
        <dependency>
            <groupId>com.github.graphstream</groupId>
            <artifactId>gs-ui-javafx</artifactId>
            <version>2.0-alpha</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>13</version>
<!--            <type>pom</type>-->
        </dependency>
        <dependency>
            <groupId>guru.nidi</groupId>
            <artifactId>graphviz-java</artifactId>
            <version>0.15.1</version>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>4.8</version>
                <executions>
                    <execution>
                        <id>antlr</id>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>